[coding-agent] Set up Supabase client and authentication infrastructure

--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
           "root": "./src/app"
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
