--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.16",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "^15.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
