--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.16",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
