--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tanstack/react-query": "^5.90.16",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-file-system": "~19.0.21",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
