--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-native-community/netinfo": "11.4.1",
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.16",
     "expo": "~54.0.31",
