--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,16 @@
 # Get these values from your Supabase project settings: https://supabase.com/dashboard/project/_/settings/api
 EXPO_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# Cloudflare R2 Configuration (for Supabase Edge Functions)
+# These are set as Supabase secrets, not environment variables
+# Run: supabase secrets set R2_ACCESS_KEY_ID=your-access-key-id
+# Run: supabase secrets set R2_SECRET_ACCESS_KEY=your-secret-access-key
+# Run: supabase secrets set R2_BUCKET_NAME=your-bucket-name
+# Run: supabase secrets set R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+#
+# To get R2 credentials:
+# 1. Go to Cloudflare Dashboard > R2 > Manage R2 API Tokens
+# 2. Create an API token with Object Read & Write permissions
+# 3. Copy the Access Key ID and Secret Access Key
+# 4. Your R2 endpoint is: https://<account-id>.r2.cloudflarestorage.com
