--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-router": "~6.0.21",
     "expo-screen-orientation": "~9.0.8",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
@@ -40,6 +41,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "tailwindcss": "~3.4.0",
     "zustand": "^5.0.9"
